Use repo storage path as default ingest directory (#93)